--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -4,11 +4,34 @@ body{
     font-family: 'Roboto', sans-serif;
 }
 
+.logout-container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+
+}
+
+.logout{
+    background-color: #7E46FF;
+    color: #FAFFFD;
+    font-size: 1.5em;
+    padding: 10px 25px;
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.logout:hover{
+    background-color: #5a20e2;
+}
+
 .main-container{
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 90dvh;
+    height: 80dvh;
     text-align: center;
     justify-content: center;
 }
@@ -52,4 +75,10 @@ body{
 
 .menu ul li:hover{
     background-color: #7E46FF;
+}
+
+@media (max-width: 700px) {
+    .menu {
+        width: 70%;
+    }
 }
